@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -56,6 +56,8 @@ public class CompositeFileListFilter<F>
 
 	private boolean allSupportAccept = true;
 
+	private boolean oneIsForRecursion;
+
 
 	public CompositeFileListFilter() {
 		this.fileFilters = new LinkedHashSet<>();
@@ -64,8 +66,17 @@ public class CompositeFileListFilter<F>
 	public CompositeFileListFilter(Collection<? extends FileListFilter<F>> fileFilters) {
 		this.fileFilters = new LinkedHashSet<>(fileFilters);
 		this.allSupportAccept = fileFilters.stream().allMatch(FileListFilter<F>::supportsSingleFileFiltering);
+		this.oneIsForRecursion = fileFilters.stream()
+				.map(f -> f.isForRecursion())
+				.filter(bool -> bool)
+				.findFirst()
+				.isPresent();
 	}
 
+	@Override
+	public boolean isForRecursion() {
+		return this.oneIsForRecursion;
+	}
 
 	@Override
 	public void close() throws IOException {
@@ -77,7 +88,6 @@ public class CompositeFileListFilter<F>
 	}
 
 	public CompositeFileListFilter<F> addFilter(FileListFilter<F> filter) {
-		this.allSupportAccept &= filter.supportsSingleFileFiltering();
 		return addFilters(Collections.singletonList(filter));
 	}
 
@@ -114,11 +124,10 @@ public class CompositeFileListFilter<F>
 					throw new IllegalStateException(e);
 				}
 			}
+			this.allSupportAccept &= elf.supportsSingleFileFiltering();
+			this.oneIsForRecursion |= elf.isForRecursion();
 		}
 		this.fileFilters.addAll(filtersToAdd);
-		if (this.allSupportAccept) {
-			this.allSupportAccept = filtersToAdd.stream().allMatch(FileListFilter<F>::supportsSingleFileFiltering);
-		}
 		return this;
 	}
 
