@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -138,6 +138,12 @@ public class CompositeFileListFilterTests {
 				return true;
 			}
 
+
+			@Override
+			public boolean isForRecursion() {
+				return true;
+			}
+
 			@Override
 			public boolean accept(String file) {
 				return true;
@@ -147,6 +153,7 @@ public class CompositeFileListFilterTests {
 		assertThat(compo.accept("foo")).isTrue();
 		compo.addFilter(s -> null);
 		assertThat(compo.supportsSingleFileFiltering()).isFalse();
+		assertThat(compo.isForRecursion()).isTrue();
 		compo.close();
 	}
 
@@ -155,6 +162,7 @@ public class CompositeFileListFilterTests {
 		CompositeFileListFilter<String> compo =
 				new CompositeFileListFilter<>(Collections.singletonList(s -> null));
 		assertThat(compo.supportsSingleFileFiltering()).isFalse();
+		assertThat(compo.isForRecursion()).isFalse();
 		compo.close();
 	}
 
