@@ -1,5 +1,5 @@
 /*
- * Copyright 2013-2019 the original author or authors.
+ * Copyright 2013-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -114,6 +114,12 @@ public class PersistentAcceptOnceFileListFilterTests extends AcceptOnceFileListF
 					protected String fileName(String file) {
 						return file;
 					}
+
+					@Override
+					protected boolean isDirectory(String file) {
+						return false;
+					}
+
 				};
 		doTestRollback(filter);
 	}
