@@ -1,5 +1,5 @@
 /*
- * Copyright 2016-2019 the original author or authors.
+ * Copyright 2016-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -388,6 +388,11 @@ public class StreamingInboundTests {
 		@Override
 		protected String fileName(String file) {
 			return file;
+		}
+
+		@Override
+		protected boolean isDirectory(String file) {
+			return false;
 		}
 
 	}
