@@ -1,5 +1,5 @@
 /*
- * Copyright 2013-2019 the original author or authors.
+ * Copyright 2013-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -44,6 +44,11 @@ public class FtpPersistentAcceptOnceFileListFilter extends AbstractPersistentAcc
 	@Override
 	protected String fileName(FTPFile file) {
 		return file.getName();
+	}
+
+	@Override
+	protected boolean isDirectory(FTPFile file) {
+		return file.isDirectory();
 	}
 
 }
