@@ -87,7 +87,7 @@
 							  expression="payload"
 							  command-options="-R"
 							  mode="REPLACE_IF_MODIFIED"
-							  filter="dotStarDotTxtFilter"
+							  filter="persistentFilter"
 							  local-directory-expression="@extraConfig.targetLocalDirectoryName + #remoteDirectory"
 							  local-filename-generator-expression="#remoteFileName.replaceFirst('sftpSource', 'localTarget')"
 							  reply-channel="output"/>
@@ -97,6 +97,19 @@
 		<constructor-arg value="^.*\.txt$" />
 		<property name="alwaysAcceptDirectories" value="true" />
 	</bean>
+
+	<bean id="persistentFilter" class="org.springframework.integration.sftp.filters.SftpPersistentAcceptOnceFileListFilter">
+		<constructor-arg ref="store"/>
+		<constructor-arg value="test"/>
+		<property name="forRecursion" value="true"/>
+		<property name="flushOnUpdate" value="true"/>
+	</bean>
+
+	<bean id="store" class="org.springframework.integration.metadata.PropertiesPersistingMetadataStore">
+		<property name="baseDirectory"
+			value="#{T(org.springframework.integration.file.remote.RemoteFileTestSupport).getScratchTempFolder().absolutePath}"/>
+	</bean>
+
 
 	<int:channel id="inboundMGetRecursiveFiltered"/>
 
